--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Easy Profile Blue - templatemo</title>
+	<title>王忠言个人主页</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
@@ -55,13 +55,13 @@
 			<div class="education">
 				<h2 class="white">自我介绍</h2>
 					<div class="education-content">
-						<h4 class="education-title accent">有2年相关工作经验</h4>
+						<!-- <h4 class="education-title accent">有2年相关工作经验</h4> -->
 							<div class="education-school">
 								<h5>座右铭：</h5><span>我是我命运的主人 我是我灵魂的船长</span>
 							</br>
 								<h5>知识技能</h5>
 							</div>
-						<p class="education-description">本人精通HTML、CSS、JavaScript，熟悉bootstarp、jquery、angularjs框架，对个人的职业规划有着清楚的认识，学习是永无止境的，可能在某些方面还有很多不足，希望贵公司能给我一个学习与进步的机会。</p>
+						<p class="education-description">本人精通HTML4、CSS2、JavaScript、ajax，掌握html5、css3新特性并具有一定的移动端开发经验。熟悉bootstarp、jquery、angularjs框架。熟悉团队开发流程，有良好的团队协作能力，熟悉git操作。对个人的职业规划有着清楚的认识，学习是永无止境的，可能在某些方面还有很多不足，希望与你共同学习、进步。</p>
 					</div>
 			</div>
 		</div>
@@ -91,10 +91,10 @@
 			<div class="languages">
 				<h2>参与项目</h2>
 					<ul>
-						<li></li>
-						<li></li>
-						<li></li>
-						<li></li>
+						<li><a href="http://55555558.com/index" title="">哈尔滨骄阳地产</a></li>
+						<li><a href="http://www.huawei-group.com/" title="">哈尔滨华葳焊切</a></li>
+						<li><a href="http://www.oceano.com.cn/" title="">佛山欧神诺</a></li>
+						<li><a href="http://www.25666625.cn/col.jsp?id=107&bsp01" title="">浙江蓝雨伞业</a></li>
 					</ul>
 			</div>
 		</div>
@@ -108,10 +108,12 @@
 				<div class="languages">
 					<h2>兴趣爱好</h2>
 					<ul>
-						<li>足球、德国</li>
-						<li>游戏、</li>
-						<li>读书、</li>
-						<li>看电影、</li>
+						<li><a href="http://baike.baidu.com/link?url=u5pdXJNDDgnM-CUEtwOyZyJggCWKUswOldWcbA4JxhLDJVfWE6Kmog1UTEMGpsh9QbWJfKP3ARvDJkYZcxTKXxpbcCW2fxdSIA59HIYYTSpbwX0HhUYzU6gOdZ1mEAHRYate9-Wf4wO2hvXm4vyUOq" title="">德国队</a></li>
+						<li><a href="https://www.baidu.com/s?ie=utf-8&f=8&rsv_bp=1&ch=1&tn=98010089_dg&wd=%E7%BD%91%E7%BB%9C%E6%B8%B8%E6%88%8F&oq=%E6%B8%B8%E6%88%8F&rsv_pq=9758b532001fc1d0&rsv_t=1ebc2rmz6DeyxUzynPLTjBkwn0iXtMx%2BCL43sYHLvxcBEjwNA3vUVP6ldMldGLaGDM8&rqlang=cn&rsv_enter=0&inputT=1157&rsv_sug3=32&rsv_sug1=18&rsv_sug7=100&rsv_sug2=0&rsv_sug4=2316" title="">网络游戏</a></li>
+						<li><a href="http://weibo.com/caijun?c=spr_qdhz_bd_baidusmt_weibo_s&nick=%E8%94%A1%E9%AA%8F&is_hot=1" title="">蔡俊悬疑小说</a></li>
+						<li><a href="http://www.dytt8.net/" title="">看电影</a></li>
+						<li><a href="http://baike.baidu.com/link?url=cB3M41TujZi6niJoL42VEVsJoXatoxHBypprGQlGrh4IKY4nl7OMUYc_mrG4PXY5Ivh4P3ZDBTMsqXNncyRahQxmsLrrbX0-1aHsb79N2aa">美剧、行尸走肉</a></li>
+						<li><a href="" title="">健身</a></li>
 					</ul>
 				</div>
 			</div>
@@ -121,12 +123,14 @@
 					<div class="experience-content">
 						<h4 class="experience-title accent">哈尔滨圣融科技有限公司</h4>
 						<h5>web前端工程师</h5><span></span>
-						<h5>2014.10-2016.5</h5>
-						<p class="education-description">Cras porta tincidunt sem, in sollicitudin lorem efficitur ut. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
+						<h5>2015.3-2016.5</h5>
+						<p class="education-description">1、负责公司产品Web前端研发</p>
+						<p class="education-description">2、与产品经理、设计师、后端工程师紧密工作在一起，负					责公司各产品易用性改进、界面技术优化和网站性能优化</p>
+						<p class="education-description">3、Web前沿技术研究和新技术调研</p>
 					</div>
 			</div>
 		</div>
-		
+
 	</div>
 </section>
 
